--- a/app/boards/shields/j46kxiao/j46kxiao.dtsi
+++ b/app/boards/shields/j46kxiao/j46kxiao.dtsi
@@ -26,8 +26,9 @@
 	};
 
 	kscan0: kscan {
-		compatible = "zmk,kscan-gpio-direct";
+		compatible = "zmk,kscan-gpio-matrix";
 		label = "KSCAN";
+		diode-direction = "col2row";
 		row-gpios
 			= <&xiao_d 6  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
 			, <&xiao_d 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
