--- a/app/boards/shields/j46kcols/j46kcols.dtsi
+++ b/app/boards/shields/j46kcols/j46kcols.dtsi
@@ -43,17 +43,19 @@
 	left_encoder: encoder_left {
         compatible = "alps,ec11";
         label = "LEFT_ENCODER";
-        a-gpios = <14 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        b-gpios = <16 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        a-gpios = <&pro_micro 14 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&pro_micro 16 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         resolution = <4>;
+		status = "disabled";
     };
 
 	right_encoder: encoder_right {
         compatible = "alps,ec11";
         label = "RIGHT_ENCODER";
-        a-gpios = <16 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-        b-gpios = <14 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        a-gpios = <&pro_micro 16 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&pro_micro 14 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
         resolution = <4>;
+		status = "disabled";
     };
 };
 
