--- a/app/west.yml
+++ b/app/west.yml
@@ -4,10 +4,12 @@ manifest:
       url-base: https://github.com/zephyrproject-rtos
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: petejohanson
+      url-base: https://github.com/petejohanson
   projects:
     - name: zephyr
-      remote: zmkfirmware
-      revision: v3.0.0+zmk-fixes
+      remote: petejohanson
+      revision: v3.0.0+zmk-fixes+rp2040
       clone-depth: 1
       import:
         # TODO: Rename once upstream offers option like `exclude` or `denylist`
